--- a/TicTacToR.Web/Views/Home/Index.cshtml
+++ b/TicTacToR.Web/Views/Home/Index.cshtml
@@ -16,8 +16,16 @@
                 }
             </hgroup>
             <p>
-                Showcasing HTML5 + SignalR + Knockout + ASP.NET Hawtness
+                Showcasing HTML5 + SignalR + Knockout + ASP.NET Hawtness. This demo is a part of the article 
+                    <strong>
+                        Building an HTML 5 Game with SignalR, KnockoutJS &amp; ASP.NET MVC
+                    </strong> in 
+                <a href="http://www.dotnetcurry.com/magazine/dnc-magazine-issue5.aspx"
+                    target="_blank" alt="DNC Magazine Issue 5 (March-April 2013)">DNC Magazine Issue 5 (March-April 2013)</a>. 
+                <b>It is a FREE digital Magazine. <a href="http://www.dotnetcurry.com/magazine/dnc-magazine-issue5.aspx"
+                    target="_blank" alt="Subscribe Now">Subscribe Now!</a></b>
             </p>
+            
         </div>
     </section>
 }
