- Cleanup - Rejoin issue fix

--- a/TicTacToR.Web/Views/Home/Index.cshtml
+++ b/TicTacToR.Web/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
         }
         else
         {
-        <div class="game-container">
+        <div class="login-placeholder">
             <div id="gridNoLogin" style="height: 400px; text-align: center">
                 <h1><a href="@Url.Action("Login", "Account")">Login</a>
                 </h1>
