--- a/TicTacToR.Web/Content/Custom.css
+++ b/TicTacToR.Web/Content/Custom.css
@@ -5,6 +5,13 @@
     background: #5daed7;
 }
 
+.login-placeholder {
+    float: left;
+    width: 100%;
+    height: 400px;
+    background: #5daed7;
+}
+
 .game-player-container {
     float: left;
     width: 30%;
